force-app/main/default/objects/ConsentTransaction__c/ConsentTransaction__c.object-meta.xml
<CustomObject>
    <description>Logs when an end subscriber, agent, or automation explicitly subscribes (opts in) or unsubscribes (opts out) a constituent in Salesforce.</description>
    <label>Consent Transaction</label>
    <nameField>
        <displayFormat>CT-{00000000}</displayFormat>
        <label>Consent Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consent Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>