force-app/main/default/objects/ConsentTransaction__c/fields/CampaignMemberId__c.field-meta.xml
<CustomField>
    <fullName>CampaignMemberId__c</fullName>
    <description>Links the Info Request to a Campaign Member, if one is matched. This is a text value, not a lookup, as Campaign Member lookups are not available currently on the platform.</description>
    <inlineHelpText>Links the Info Request to a Campaign Member, if one is matched.</inlineHelpText>
    <label>Campaign Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>