force-app/main/default/objects/ConsentTransaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Contact for this Consent Transaction, if applicable.</description>
    <inlineHelpText>The related Contact for this Consent Transaction, if applicable.</inlineHelpText>
    <label>Client (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consent Transactions</relationshipLabel>
    <relationshipName>ConsentTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>