force-app/main/default/objects/ConsentTransaction__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <description>CaseSafeId for Contact Integration to Marketing Cloud (Reporting). Not for page layouts or user interface.</description>
    <formula>CASESAFEID(Contact__c)</formula>
    <inlineHelpText>CaseSafeId for Contact Integration to Marketing Cloud (Reporting). Not for page layouts or user interface.</inlineHelpText>
    <label>Contact Id</label>
    <type>Text</type>
</CustomField>