force-app/main/default/objects/ConsentTransaction__c/fields/ContactSite__c.field-meta.xml
<CustomField>
    <fullName>ContactSite__c</fullName>
    <description>The Contact Site (origin) of this request, to help with matching to a Campaign and Campaign Member.</description>
    <inlineHelpText>The Contact Site (origin) of this request, to help with matching to a Campaign and Campaign Member.</inlineHelpText>
    <label>Contact Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>