force-app/main/default/objects/ConsentTransaction__c/fields/EventInterest__c.field-meta.xml
<CustomField>
    <fullName>EventInterest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The specific Event Interest for this Consent Transaction.</description>
    <inlineHelpText>The specific Event Interest for this Consent Transaction.</inlineHelpText>
    <label>Event Interest</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Consent Transactions</relationshipLabel>
    <relationshipName>ConsentTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>