force-app/main/default/objects/ConsentTransaction__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Lead for this Consent Transaction, if applicable.</description>
    <inlineHelpText>Related Lead for this Consent Transaction, if applicable.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Consent Transactions</relationshipLabel>
    <relationshipName>ConsentTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>