force-app/main/default/objects/ConsentTransaction__c/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <description>CaseSafeId for Lead Integration to Marketing Cloud (Reporting). Not for page layouts or user interface.</description>
    <formula>CASESAFEID( Lead__c )</formula>
    <inlineHelpText>CaseSafeId for Lead Integration to Marketing Cloud (Reporting). Not for page layouts or user interface.</inlineHelpText>
    <label>Lead Id</label>
    <type>Text</type>
</CustomField>