force-app/main/default/objects/ConsentTransaction__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Program related to the Consent Transaction.</description>
    <inlineHelpText>Program related to the Consent Transaction.</inlineHelpText>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Consent Transactions</relationshipLabel>
    <relationshipName>ConsentTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>