force-app/main/default/objects/ConsentTransaction__c/fields/QNGInfoRequest__c.field-meta.xml
<CustomField>
    <fullName>QNGInfoRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship of this Consent Transaction to an Info Request, if applicable.</description>
    <inlineHelpText>Relationship of this Consent Transaction to an Info Request, if applicable.</inlineHelpText>
    <label>Info Request (QNG)</label>
    <referenceTo>QNG_Info_Request__c</referenceTo>
    <relationshipLabel>Consent Transactions</relationshipLabel>
    <relationshipName>ConsentTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>