force-app/main/default/objects/ConsentTransaction__c/fields/SFMCSubscriberId__c.field-meta.xml
<CustomField>
    <fullName>SFMCSubscriberId__c</fullName>
    <description>CaseSafeId for a single Subscriber Id, for Integration to Marketing Cloud (Reporting). Not for page layouts or user interface.</description>
    <formula>IF(!ISBLANK(Contact__c), CASESAFEID(Contact__c),
IF(!ISBLANK(Lead__c), CASESAFEID(Lead__c),
&quot;&quot;))</formula>
    <inlineHelpText>CaseSafeId for a single Subscriber Id, for Integration to Marketing Cloud (Reporting). Not for page layouts or user interface.</inlineHelpText>
    <label>SFMC Subscriber Id</label>
    <type>Text</type>
</CustomField>