force-app/main/default/objects/ConsentTransaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Indicates whether the consent transaction represents an opt-in or an unsubscribe event.</description>
    <inlineHelpText>Indicates whether the consent transaction represents an opt-in or an unsubscribe event.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt-in</fullName>
            </value>
            <value>
                <fullName>Unsubscribe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>