force-app/main/default/objects/ConsentTransaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Lead__c</columns>
    <columns>QNGInfoRequest__c</columns>
    <columns>Program__c</columns>
    <columns>Source__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>